# rag

./: README.md  pyproject.toml
notebooks/: test.py  testing.ipynb
