[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.19",
    "langchainhub>=0.1.21",
    "pypdf>=5.6.0",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
]
